gem2deb (0.21) UNRELEASED; urgency=medium

  * dh_ruby: only ask questions interactively when called by gem2deb
  * dh-make-ruby: use debhelper compatibility level 9 by default
  * gem2deb-test-runner: call `gem list` when dependency checking fails to
    ease debugging

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 31 Jul 2015 09:40:58 -0300

gem2deb (0.20.2) unstable; urgency=medium

  * gem2deb-test-runner: include version-independent rubygems-integration
    directories in GEM_PATH when checking dependencies.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 30 Jul 2015 09:24:33 -0300

gem2deb (0.20.1) unstable; urgency=medium

  * gem2deb-test-runner:
    - use the API version number to point to rubygems-integration directories
      inside the build location
    - print banner on dependency resolution step

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 09:09:00 -0300

gem2deb (0.20) unstable; urgency=medium

  * gem2deb-test-runner:
    - when checking dependencies, don't add rubygems-integration paths from
      different Ruby versions to GEM_PATH.
    - simplify the command line that runs rake
    - gem2deb/rake/testtask: Use options to make all test runs verbose by
      default
    - gem2deb/rake/spectask: add a utility task for running tests with rspec
    - print a sbuild-like banner before start running tests
  * dh-make-ruby: generate debian/ruby-tests.rake using gem2deb/rake/spectask
  * dh_ruby:
    - print sbuild-like banners before installing files and before building
      native extensions

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 21 Jul 2015 22:55:15 -0300

gem2deb (0.19) unstable; urgency=medium

  * gem2deb: download .gem files in a temporary directory
  * gem2deb-test-runner: add dependency on ruby-minitest
  * dh-make-ruby: add README's uncommented to debian/ruby-foo.docs

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Jul 2015 18:28:03 -0300

gem2deb (0.18.3) unstable; urgency=medium
