@@ -1,7 +1,10 @@
 gem2deb (0.21) UNRELEASED; urgency=medium
 
   * dh_ruby: only ask questions interactively when called by gem2deb
-  * dh-make-ruby: use debhelper compatibility level 9 by default
+  * dh-make-ruby:
+    - use debhelper compatibility level 9 by default
+    - don't generate debian/tests/control.ex anymore. So far a few dozen
+      packages, I have deleted it every single time.
   * gem2deb-test-runner: call `gem list` when dependency checking fails to
     ease debugging
 
